# server

./: .air.toml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API.md  API_README.md  AUTOMATIC_MIGRATION.md  CHANGELOG.md  CLAUDE.md  Caddyfile  DESIGN_SYSTEM.md  DEVICE_CARD_REDESIGN_PROMPT.md  DIM_MODE_FEATURE.md  Dockerfile  GEMINI.md  INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  MIGRATION_NOTES.md  PR_DESCRIPTION.md  README.md  WEBSOCKET_PROTOCOL.md  alembic.ini  babel.cfg  build.ps1  clone_system_apps_repo.py  djlint.toml  docker-compose.dev-override.yaml  docker-compose.dev.yaml  docker-compose.https.yaml  docker-compose.postgres.yaml  docker-compose.redis.yaml  docker-compose.yaml  docker-entrypoint.sh  errors.txt  gen_app_array.py  go.mod  go.sum  gunicorn.conf.py  (+17 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml
.github/workflows/: build.yml  homebrew-release.yml  publish.yml
.gocache/: trim.txt
.gocache/00/: 0023c30126a9240272526316599d0a72c6b3e6c28ec7b04792c402d9843285c2-d  002948e521e2801ebd5a68749563abb1555b6bb55cfed37605083e80dd54526c-a  009d991e9fb6571d3b668b4130f4c3cf2f75446a23e5bac70e81312b86f10881-d  00b195e0c5cc09ee57370778ff631c1f873e6a0e4536920c17f15f36ac05a941-a  00c1843e57c2423e4efc0f8cf4b41fedd46ef17209ba2a1f557e17f13afbb97d-a
.gocache/01/: 01716fa1bb68111a6c759a1822079f10a57ef25529d7ab4d52c45187593e6c37-d  01aed17d39d46942028fb05c510e581999540eaf6f39717900a2c52194696ee4-d  01c8511224d7359709dea96a590a80319cd8c036fd707a091172c006eced13f0-a  01dc6495b2457830bd464fd78d82d377b0f9269ef3a656928902c80a6e3d783e-a  01dd1e505a31f7924514d5d354f6cd63f132a495b8bb1ddd01650a43955e0a2b-a
.gocache/02/: 02586a2e3dc5ddc007ee609900c7858d4e260fcb318f5be945bcd3e4d026a28f-a  02dee0e05ef2669836ffe188c8f15111d8c0965127071948da1bbe30a1e91af2-a
.gocache/03/: 037886080afbdaf394b8cc4bc52a700f517c9d94c6361ee419e9f7c82138a5e6-d  03826401102f81a4986c7274befc3f6eb550d6e5a7fe10f7564ed354f16ff31c-a  03ba6299f2b29210f7adfc28d22a4307e6870570a62090ccf637e63c1f23f99e-a  03c80e431dbecf254c73ce50ab866ce82434c4b1fb2f61f6431ec842dda8e393-a  03d083d704823c6049ddc659a0c1fc5b4088939bf24d42d62da893055f76d621-d
.gocache/04/: 0403a345609686210987b5a858050b35b4d3b07e82687925fa1812fbe6d85043-a  0410489f794ce429ee6879394f90fd96b69b5ed0526a4a1c9618244504dacfc7-a  0424f6cae65a4a901f9f774e588ece8ee9d193bf5b3aee4e1ff164c6078c3386-d  04504c4c4df7c7757cde72b19a3b195920aa051303ddc3477c4892cc177be9a9-a  0464884d3bc5e4c44b8d2008bdfcf202a087c9620af30cbdbcfc7f43db6d199b-a  04756c0023c37521c0e6034c63fd7f253b09f7277d55772c9cac9125f6f6d57e-a  0498a4e421f13af52f7a9118e32e69cfa65ffa02152c621973a8f71216b31380-d
.gocache/05/: 050980b07065c552f1e511da8896fd3f8fd5c5747040e6ae1289d53731bd888f-a  0535dcc8138c325cd4b0b7c14d31f1df1fd5931a07fcb1a1a43c43e0df91c98a-a  058fa403b9958ac516488c212015919bc42f069e92d7fd168e5612549eab1e3c-d  0598ca5adec3005f35459d25b0dd5d26728d61d1050ac5d1cc65f07f94e9300e-d  05a0f66ce54faa2212b0706b146c2aa9b001e12b35bd7581f62da3ddac968283-d  05b301b8ff41314e4e080200fc70fe95e9794e1e0d8e033d6c996ebf0087bfd6-a
.gocache/06/: 06a791014b406996eeea90a95596623b7f38a0e58a2e0774413032cc2ff7eae9-a  06c71a7c54b11c24be92448dfa593017810cc2271c85e58e381d14ec35733cb1-a  06f5961cf72a4c26f7154137c07e01faa58d97575dc2e7a8882b5a110e8df860-a
.gocache/07/: 0712638f3dfe277ceb930691efaa2c58e771f20fda87edf9428ad720d9e69208-a  0777c0560ebd00a7f23c7b898058051bc8339e8fc8ff4b0dbd22652c934f7fd9-a  0797cc1dfabaee5d31153a3f819ea74b7e7f52516f0522cd6c75d427095c8108-d  07b34678e808c87f968c08b46c1c5928e47841b68ea15fdc269df6a040c63c25-a  07b5153f67392d5a4d5d7cf2540ca3e3946f94fcc91069292ca11db5c085c3ae-d  07c60bc432df8542db4f81a0d74fa1dee353f20e9350c8794c2ded39f49aa22b-a
.gocache/08/: 083db7b54b8116540355e829364b34af8957f1a80d957bea04730e2e381de5de-a  085073506fa2c82d6c71b9a1dc8f440168f0ba13f0501465e61ea98ad1427b1c-d  08827a5b8c937c8a9f0153aee2f257c59980fdab0f8e4ea26abbe5c79c836597-a  088757b65a3ea2e7c95182ad5cc4c8b1e09163d276dd053038e076d486b20d88-a  08db57f46a968b4b3869de29221ea6aa04293aaad76f1e0936407db2242884cd-a
.gocache/09/: 099ecfbe5a883806c37f31476825477b3b898262a997bda6c84c788c178eba6b-a  09bf96c1fae70dd14ad97928db09b1ac320a62ef354ab9d3ee9e36ad51639761-a  09cf348d5bd1e61d55a7e53b0202fdce3c050d077faa0cac473579461a6b8b78-a  09d6e03967e91e0c12923bd8c87abde7126f281bfaec6caa6f2d8b249e94f075-a  09d8851cc54cf8bfc0b9185044fa21d7255a4995553509042240d1ec9960b5c7-a
.gocache/0a/: 0a0b7b872b5bea6b34e80f909a089e363cbb2f21c5423731df83cc2bdd9b0bd3-a  0a1e00449f376bd8dc78dd1e8b5b3ea45a70b30989b06cabb5bb16c1a51704d4-d  0a758092a019fb275fd6256d33c8056b8ff4d71466e490bc28e167c0e7e1a428-a
aigenmd/: ADDAPP_VERSION_DISPLAY.md  API_EXAMPLES_ON_UPDATEAPP.md  API_PINNING_BUG_FIX.md  API_PINNING_IMPLEMENTATION_COMPLETE.md  PINNED_APP_NOTIFICATION.md  README.md  UPLOAD_APP_DELETE_BUTTON.md  WEBSOCKET_PROTOCOL.md
alembic/: README  env.py  script.py.mako
firmware/: correct_firmware_esptool.py
scripts/: generate_version.sh  migrate_data.py  migrate_to_sqlmodel.py  reset_admin_password.py
tests/: conftest.py  playwright_test.py  test_api.py  test_api_keys.py  test_app_create_edit_delete.py  test_device_create+delete.py  test_device_operations.py  test_devices_api.py  test_dots_svg.py  test_files_upload+delete.py  test_migration.py  test_playlists.py  test_register+login.py  test_schedule.py  test_user_registration.py  test_version.py  test_webp_upload.py  test_websockets.py  utils.py
tidbyt_manager/: db.py  manager.py
tronbyt_server/: __init__.py  api.py  api_fastapi.py  auth.py  auth_fastapi.py  config.py  connection_manager.py  db.py  db_fastapi.py  dependencies.py  firmware_utils.py  flash.py  git.txt  git_utils.py  healthcheck.py  main.py  manager.py  manager_fastapi.py  migrations.py  models.py  models_fastapi.py  models_sql.py  parsing.txt  pixlet.py  pixlet_utils.py  runcmd  sortissues.txt  startup.py  sync.py  system_apps.py  system_apps_fastapi.py  templates.py  templating.py  utils.py  version.py
web/: embed.go
(+1627 files in other folders)
