[project]
name = "tronbyt-server"
dynamic = ["version"]
description = "Manage your apps on your Tronbyt completely locally"
authors = [
    {name = "tavdog", email = "tavdog@users.noreply.github.com"},
    {name = "ingmarstein", email = "490610+IngmarStein@users.noreply.github.com"},
]
dependencies = [
    "esptool>=5.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tzlocal>=5.3.1",
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.20",
    "fastapi-babel>=1.0.0",
    "fastapi-login>=1.10.3",
    "pydantic-settings>=2.11.0",
    "Jinja2>=3.1.6",
    "werkzeug>=3.1.3",
    "redis>=7.0.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "gitpython>=3.1.45",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend", "babel>=2.17.0"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
source-includes = [ "**/*.po", "babel.cfg" ]
excludes = [ "**/messages.pot", "**/.DS_Store", "**/.*.swp", "**/.gitignore" ]

[tool.pdm.scripts]
pre_build = "pybabel compile -d tronbyt_server/translations"
test = "pytest"
start = "python -m tronbyt_server.run"
extract = "pybabel extract -F babel.cfg -k _l -o messages.pot ."
_init = "pybabel init -i messages.pot -d tronbyt_server/translations -l {args}"
init = { composite = ["extract", "_init {args}"] }
_update = "pybabel update -i messages.pot -d tronbyt_server/translations"
update = { composite = ["extract", "_update"] }
compile = "pybabel compile -d tronbyt_server/translations"
mypy = "mypy --strict --install-types --ignore-missing-imports --exclude system-apps --exclude dist ."

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict = true
show_error_codes = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pyright]
include = ["."]
typeCheckingMode = "standard"
exclude = [
    "data/**",
    "**/__pycache__",
    "**/.*"
]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "mypy>=1.18.2",
    "ruff>=0.14.3",
    "pip>=25.3",
]
